syntax = "proto3";

package fraud.pb;

import "ipld/pb/share.proto";

enum axis {
  Row = 0;
  Col = 1;
}

message BadEncoding {
  bytes HeaderHash = 1;
  uint64 Height   = 2;
  repeated ipld.pb.Share Shares = 3;
  uint32 Index    = 4;
  axis Axis    = 5;
}
